; ModuleID = '/home/carl/AnghaBench/freebsd/stand/common/extr_part.c_bsd_parttype.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/common/extr_part.c_bsd_parttype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PART_FREEBSD_SWAP = common dso_local global i32 0, align 4
@PART_FREEBSD_UFS = common dso_local global i32 0, align 4
@PART_FREEBSD_VINUM = common dso_local global i32 0, align 4
@PART_FREEBSD_ZFS = common dso_local global i32 0, align 4
@PART_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @bsd_parttype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bsd_parttype(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 130, label %5
    i32 131, label %7
    i32 129, label %9
    i32 128, label %11
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @PART_FREEBSD_SWAP, align 4
  store i32 %6, i32* %2, align 4
  br label %15

7:                                                ; preds = %1
  %8 = load i32, i32* @PART_FREEBSD_UFS, align 4
  store i32 %8, i32* %2, align 4
  br label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @PART_FREEBSD_VINUM, align 4
  store i32 %10, i32* %2, align 4
  br label %15

11:                                               ; preds = %1
  %12 = load i32, i32* @PART_FREEBSD_ZFS, align 4
  store i32 %12, i32* %2, align 4
  br label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @PART_UNKNOWN, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %13, %11, %9, %7, %5
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
